...
            "state" : "translated",
            "value" : "Хайлайты"
          }
        }
      }
    },
    "Home" : {
      "comment" : "A label for the home tab.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Хранилище iCloud заполнено. Пожалуйста, освободите место, чтобы продолжить синхронизацию."
          }
        }
      }
    },
    "iCloud Sync Error" : {
      "comment" : "The title of an alert that appears when iCloud sync fails.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Новый момент"
          }
        }
      }
    },
    "No records for this day" : {
      "comment" : "A message displayed when a user has no entries for a selected day.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Проблема с синхронизацией: Неизвестный статус."
          }
        }
      }
    },
    "Synchronization is suspended. Please log in to iCloud in Settings." : {
      "comment" : "Text displayed in a notification when iCloud is logged out.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
...
